
        fixed issues:
            - block updates were not called in every case
            - walls and fences were not updating their state correctly
            - during printing an exception, an new exception could occur
            - event "worldgen:chunk:finished" was not called in most cases

    changelog of dev-cycle 2 [modding improvements]
        - improved dependency system for mods

    changelog of dev-cycle 3 [planned: advanced rendering functions]
    changelog of dev-cycle 4 [planned: UI improvements]
    changelog of dev-cycle 5 [planned: State-definition files]
    changelog of dev-cycle 6 [planned: preparation for client/server: IWorld-interface and integrated-impl.]

    changelog of dev-cycle [last] [planned: bug fixing of work, overall bug fixing, testing]


    planned (some parts may be moved to future snapshots):
        - fix issues: 80, 157, 175, 176, 177, 178, 181
        - add support for .obj files for block models
        - add support for forge block state format, maybe split up the blockstate-loaders into different files
        - clean up & improve the following elements: (for all: use texture reload event)
            button: clean up rendering code, maybe use an batch for all parts, listen to the on_resize event for
                re-calculation
            image: clean up rendering code, check if it is still working
            lable: clean up rendering code, can we add possibility to render colored text
            progress bar: fix issue 174, clean up code, can we make pgb change color over time
            text input: clean up rendering code, implement navigation & selection
            slot <-> slot copy: make connection more stable, help gc with deleting when not needed
        - implement serializer for states making runtime-based changes possible & easier to create new states
        - implement IWorld-class with abstract interaction functions, add ServerWorld & ClientWorld-instances