@@ -15,6 +15,7 @@ import PIL.Image
 import uuid
 import random
 import logger
+import deprecation
 
 
 class Inventory:
@@ -93,7 +94,11 @@ class Inventory:
         """
         return []
 
+    @deprecation.deprecated("dev1-2", "a1.3.0")
     def _get_position(self):
+        return self.get_position()
+
+    def get_position(self):
         """
         :return: the position of the inventory
         """
