@@ -40,7 +40,7 @@ class InventoryChest(gui.Inventory.Inventory):
 
     def draw(self, hoveringslot=None):
         self.on_draw_background()
-        x, y = self._get_position()
+        x, y = self.get_position()
         if self.bgsprite:
             self.bgsprite.position = (x, y)
             self.bgsprite.draw()
