@@ -54,7 +54,7 @@ class InventoryCraftingTable(gui.Inventory.Inventory):
         draws the inventory
         """
         self.on_draw_background()
-        x, y = self._get_position()
+        x, y = self.get_position()
         if self.bgsprite:
             self.bgsprite.position = (x, y)
             self.bgsprite.draw()
