@@ -1,4 +1,4 @@
-started these clone on 12th of July, 2019
+sstarted these clone on 12th of July, 2019
 [github]: started day 1 as 12th of July, 2019
 [github]: created git repo, author: uuk, uuk has now all rights onto these project
 [uuk]: added tasks.list storing some todo's for the future
